BugFix - Showing all unused words / depenendecies in editing window
Added class for CompressedDependencies.

--- a/todo.txt
+++ b/todo.txt
@@ -117,6 +117,9 @@ Otazky:
 - nadradeny token a podriadeny token (hlavny a vedlajsi) (governor, dependent)
 - priloha
 	- pomenovania dependencies
+
+- uvod
+- kurziva v pseudokode
 ===============================================================================================================================================================
 
 TODO:
